Pre Prod Updated

--- a/src/app/components/clases-jove/clases-jove.component.css
+++ b/src/app/components/clases-jove/clases-jove.component.css
@@ -12,7 +12,7 @@ button {
 #close {
     margin-right: 10px;
     margin-top: 10px;
-    color: red;
+    color: #f02c60;
 }
 
 #close2 {
@@ -24,7 +24,7 @@ button {
     margin-left: 120px;
     margin-bottom: 10px;
     font-weight: 700;
-    color: red;
+    color: #f02c60;
 }
 
 .modal {
@@ -40,7 +40,7 @@ button {
 .modal-header h5 {
     font-weight: 700;
     text-align: center;
-    color: red;
+    color: #f02c60;
 }
 
 #modalImg1 {
