--- a/src/app/components/galeria/galeria.component.css
+++ b/src/app/components/galeria/galeria.component.css
@@ -16,7 +16,7 @@ a:hover {
 }
 
 .container-fluid .row .col-6 img:hover {
-    border: solid 2px rgba(255, 0, 0, 0.418);
+    border: solid 2px #f02c60;
 }
 
 .contenedor:hover .imagen {
@@ -54,7 +54,7 @@ a:hover {
 }
 
 #clase {
-    background-color: red;
+    background-color: #f02c60;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -64,7 +64,7 @@ a:hover {
 }
 
 #clase2 {
-    background-color: red;
+    background-color: #f02c60;
     width: 50px;
     height: 50px;
     cursor: pointer;
@@ -73,12 +73,12 @@ a:hover {
 
 #clase2:hover {
     background-color: transparent;
-    border: solid 2px red;
+    border: solid 2px #f02c60;
 }
 
 #clase:hover {
     background-color: transparent;
-    border: solid 2px red;
+    border: solid 2px #f02c60;
 }
 
 #arrows1 {
