--- a/src/app/components/navbar-superior/navbar-superior.component.css
+++ b/src/app/components/navbar-superior/navbar-superior.component.css
@@ -10,4 +10,9 @@ small {
 #cabecera {
     margin-left: -10px;
     margin-right: 70px;
+    color: #f02c60;
+}
+
+#matriculate {
+    background-color: #f02c60;
 }
