--- a/src/app/components/equipo/equipo.component.html
+++ b/src/app/components/equipo/equipo.component.html
@@ -21,7 +21,7 @@
 
         <div class="col-5">
 
-            <div class="card">
+            <div class="card border-light">
                 <img class="card-img-top" src="assets/img/team/graciana-morillas.png" alt="Card image cap">
                 <div class="card-body text-center">
                     <h5 class="card-title text-dark">Graciana Morillas</h5>
@@ -33,7 +33,7 @@
 
         <div class="col-5">
 
-            <div class="card">
+            <div class="card border-light">
                 <img class="card-img-top" src="assets/img/team/ezequiel-pituelli.png" alt="Card image cap">
                 <div class="card-body text-center">
                     <h5 class="card-title text-dark">Ezequiel Pituelli</h5>
@@ -60,7 +60,7 @@
     <div class="row text-center">
         <div class="col-3">
 
-            <div class="card">
+            <div class="card border-light">
                 <img class="card-img-top" src="assets/img/team/yisbell-pituelli.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Yisbell Pituelli</h5>
@@ -72,7 +72,7 @@
         </div>
         <div class="col-3">
 
-            <div class="card">
+            <div class="card border-light">
                 <img class="card-img-top" src="assets/img/team/anabel-pituelli.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Anabel Pituelli</h5>
@@ -84,18 +84,7 @@
         </div>
         <div class="col-3">
 
-            <div class="card">
-                <img class="card-img-top" src="assets/img/team/alba-blasco_0.png" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title text-dark">Laura López</h5>
-                    <p class="card-text text-muted">Profesora Clásico y Funky-Jazz</p>
-                </div>
-            </div>
-
-        </div>
-        <div class="col-3">
-
-            <div class="card">
+            <div class="card border-light">
                 <img class="card-img-top" src="assets/img/team/marta-romero.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Marta Romero</h5>
@@ -105,6 +94,11 @@
             </div>
 
         </div>
+        <div class="col-3">
+
+
+
+        </div>
 
 
 
@@ -118,49 +112,49 @@
     <div class="row text-center">
         <div class="col-3">
 
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img-top" src="assets/img/team/marta-de-benito.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Marta de Benito</h5>
                     <p class="card-text text-muted">Profesora Funky-Jazz</p>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
         <div class="col-3">
 
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img-top" src="assets/img/team/anna-vela.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Anna Vella</h5>
                     <p class="card-text text-muted">Profesora Clásico</p>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
         <div class="col-3">
 
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img-top" src="assets/img/team/goretti-valverde.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Goretti Valverde</h5>
                     <p class="card-text text-muted">Profesora Clásico y Funky-Jazz</p>
                 </div>
-            </div>
+            </div> -->
 
         </div>
         <div class="col-3">
 
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img-top" src="assets/img/team/carlos-catalan.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Carlos Catalán</h5>
                     <p class="card-text text-muted">Profesor Zumba y Salsa</p>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
 
@@ -176,31 +170,31 @@
     <div class="row text-center">
         <div class="col-3">
 
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img-top" src="assets/img/team/laura-fernandez.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Laura Fernández</h5>
                     <p class="card-text text-muted">Profesora de Clásico</p>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
         <div class="col-3">
 
-            <div class="card">
+            <!-- <div class="card">
                 <img class="card-img-top" src="assets/img/team/nadia_marinoff.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Nadia Marinoff</h5>
                     <p class="card-text text-muted">Profesora de Clásico</p>
 
                 </div>
-            </div>
+            </div> -->
 
         </div>
         <div class="col-3">
 
-            <div class="card">
+            <div class="card border-light">
                 <img class="card-img-top" src="assets/img/team/cane.png" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title text-dark">Cané Allesta</h5>
