--- a/src/app/components/galeria/galeria.component.html
+++ b/src/app/components/galeria/galeria.component.html
@@ -2461,7 +2461,7 @@
 
         </div>
         <!--BUTTONS-->
-        <button (click)="verMas()" id="mas" type="button" class="btn btn-outline-danger"><strong *ngIf="!mas">Ver Más</strong><strong *ngIf="mas">Ver Menos</strong>&nbsp;<i *ngIf="spinner" class="fas fa-spinner fa-spin"></i></button>
+        <!-- <button (click)="verMas()" id="mas" type="button" class="btn btn-outline-danger"><strong *ngIf="!mas">Ver Más</strong><strong *ngIf="mas">Ver Menos</strong>&nbsp;<i *ngIf="spinner" class="fas fa-spinner fa-spin"></i></button> -->
         <!-- MODALS -->
 
 
