--- a/src/app/components/navbar-home/navbar-home.component.html
+++ b/src/app/components/navbar-home/navbar-home.component.html
@@ -23,19 +23,22 @@
                 <a class="nav-link" [routerLink]="['/contacto']">Contacto</a>
             </li>
         </ul>
-        <button href="" id="matriculate" type="button" class="btn btn-danger my-2 my-lg-0 animated fadeInRight">Matricúlate</button>
+        <button href="sectionClases" id="matriculate" type="button" class="btn btn-danger my-2 my-lg-0 animated fadeInRight">Matricúlate</button>
         <div id="redes" class="form-inline my-1 my-sm-0">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" target="blank" href="https://www.facebook.com/EscuelaDeDanzaBarcelona/">
                 <i class="fab fa-facebook-f fa-xs"></i>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" target="blank" href="https://goo.gl/maps/PaTfrRm4B5L2">
                 <i class="fab fa-google fa-xs"></i>
             </a>
-            <a class="navbar-brand" href="#">
+            <!-- <a class="navbar-brand" href="#">
                 <i class="fab fa-linkedin-in fa-xs"></i>
             </a>
             <a class="navbar-brand" href="#">
                 <i class="fab fa-twitter fa-xs"></i>
+            </a> -->
+            <a class="navbar-brand" target="blank" href="https://www.instagram.com/yisbell_dance/">
+                <i class="fab fa-instagram fa-xs"></i>
             </a>
         </div>
     </div>
