--- a/src/app/components/navbar-superior/navbar-superior.component.html
+++ b/src/app/components/navbar-superior/navbar-superior.component.html
@@ -6,5 +6,5 @@
     <a class="navbar-brand text-center animated zoomIn " href="#"><i class="fas fa-users fa-xs"></i>&nbsp;Quienes somos? <br><small>Desde 1986 en Sarriá</small></a>
     <a class="navbar-brand text-center animated zoomIn " href="#"><i class="fas fa-book-reader fa-xs"></i>&nbsp;Nuestros Cursos <br><small>Plazas Disponibles</small></a>
     <a class="navbar-brand text-center animated zoomIn " href="#"><i class="fas fa-map-pin fa-xs"></i>&nbsp;Donde Estamos? <br><small>Mire nuestra Ubicación</small></a>
-    <button href="" id="matriculate" type="button" class="btn my-2 my-lg-0 animated fadeInRight">Matricúlate</button>
+    <button href="#sectionClases" id="matriculate" type="button" class="btn my-2 my-lg-0 animated fadeInRight">Matricúlate</button>
 </nav>
