--- a/src/app/components/section2/section2.component.html
+++ b/src/app/components/section2/section2.component.html
@@ -1,5 +1,5 @@
 <!--================Post Slider Area =================-->
-<section class="post_slider_area">
+<section id="sectionClases" class="post_slider_area">
     <div class="post_slider_inner owl-carousel">
         <div id="item" class="item">
             <div class="post_s_item">
