--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,10 +6,10 @@
                     <br>
                     <h4 class="text-justify text-dark">Contáctanos:</h4>
 
-                    <h6><i class="fas fa-thumbtack"></i> &nbsp;Via Augusta, 319 - <br>08017 Barcelona </h6>
+                    <h6><a href="https://goo.gl/maps/PaTfrRm4B5L2" target="blank"><i class="fas fa-thumbtack"></i> &nbsp;Via Augusta, 319 - <br>08017 Barcelona (Sarrià) </a></h6>
                     <h6><i class="fas fa-phone"></i>&nbsp;93 203 71 76</h6>
                     <h6><i class="fab fa-whatsapp"></i>&nbsp;+34 676 091 350</h6>
-                    <h6><i class="fas fa-envelope-open"></i>&nbsp;escuela@gmail.com</h6>
+                    <h6><i class="fas fa-envelope-open"></i>&nbsp;yisbell.info@gmail.com</h6>
                     <br>
                     <h6><i class="fas fa-file-contract"></i>&nbsp;Política de Privacidad</h6>
                     <h6><i class="fas fa-file-contract"></i>&nbsp;Términos y Condiciones</h6>
@@ -23,17 +23,20 @@
                             Generalitat de Catalunya.</p>
                     </div>
                     <div id="redes" class="form-inline my-1 my-sm-0">
-                        <a class="navbar-brand text-muted" href="#">
+                        <a class="navbar-brand text-muted" target="blank" href="https://www.facebook.com/EscuelaDeDanzaBarcelona/">
                             <i class="fab fa-facebook-f fa-xs"></i>
                         </a>
-                        <a class="navbar-brand text-muted" href="#">
+                        <a class="navbar-brand text-muted" target="blank" href="https://goo.gl/maps/PaTfrRm4B5L2">
                             <i class="fab fa-google fa-xs"></i>
                         </a>
-                        <a class="navbar-brand text-muted" href="#">
+                        <!-- <a class="navbar-brand text-muted" href="#">
                             <i class="fab fa-linkedin-in fa-xs"></i>
                         </a>
                         <a class="navbar-brand text-muted" href="#">
                             <i class="fab fa-twitter fa-xs"></i>
+                        </a> -->
+                        <a class="navbar-brand text-muted" target="blank" href="https://www.instagram.com/yisbell_dance/">
+                            <i class="fab fa-instagram fa-xs"></i>
                         </a>
                     </div>
                 </div>
