--- a/src/app/components/section3/section3.component.css
+++ b/src/app/components/section3/section3.component.css
@@ -113,5 +113,11 @@
 }
 
 #centroContainer h6 {
-    margin-top: 100px;
+    margin-top: 5px;
+    font-size: 12px;
+}
+
+#logos {
+    width: 120px;
+    height: 120px;
 }
