--- a/src/app/components/section3/section3.component.html
+++ b/src/app/components/section3/section3.component.html
@@ -44,11 +44,11 @@
     </div>
 </div>
 <h1 id="header" class="text-center">
-  <small id="small" class="text-muted">Alcanza tu mejor versión</small>
-  <br> FORMACIÓN PROFESIONAL
+    <small id="small" class="text-muted">Alcanza tu mejor versión</small>
+    <br> FORMACIÓN PROFESIONAL
 </h1>
 <section id="section2" class="container-fluid">
-  
+
     <div id="row" class="row">
 
         <div id="col" class="col-6">
@@ -58,18 +58,18 @@
                     <h1 class="card-title">PROFESORES</h1>
                     <p class="card-text">This is a wider card with supporting</p>
                     <div class="row">
-                            <div id="btn1" class="col-6">
-                                <div id="claseJov" class="text-center">
-                                  <h1>Temario</h1>
-                                </div>
+                        <div id="btn1" class="col-6">
+                            <div id="claseJov" class="text-center">
+                                <h1>Temario</h1>
                             </div>
-                            <div id="btn2" class="col-6">
-                                <div id="claseJov" class="text-center">
-                                  <h1>Horario &nbsp;<i id="arrows" class="fas fa-arrow-down fa-xs animated fadeInLeft"></i></h1>
-                                </div>
+                        </div>
+                        <div id="btn2" class="col-6">
+                            <div id="claseJov" class="text-center">
+                                <h1>Horario &nbsp;<i id="arrows" class="fas fa-arrow-down fa-xs animated fadeInLeft"></i></h1>
                             </div>
-                       
-                    </div>                                                     
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
@@ -81,23 +81,25 @@
                     <h1 class="card-title">BAILARINES</h1>
                     <p class="card-text">This is a wider card with supporting </p>
                     <div class="row">
-                      <div id="btn3" class="col-6">
-                          <div id="claseJov" class="text-center">
-                            <h1>Estilos</h1>
-                          </div>
-                      </div>
-                      <div id="btn4" class="col-6">
-                          <div id="claseJov" class="text-center">
-                            <h1>Horario &nbsp;<i id="arrows" class="fas fa-arrow-down fa-xs animated fadeInLeft"></i></h1>
-                          </div>
-                      </div>
-                 
-                     </div>    
+                        <div id="btn3" class="col-6">
+                            <div id="claseJov" class="text-center">
+                                <h1>Estilos</h1>
+                            </div>
+                        </div>
+                        <div id="btn4" class="col-6">
+                            <div id="claseJov" class="text-center">
+                                <h1>Horario &nbsp;<i id="arrows" class="fas fa-arrow-down fa-xs animated fadeInLeft"></i></h1>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
         <div class="text-center text-white" id="centroContainer">
-            <h6>Escuela de danza autorizada por el Departament d'Educació de la Generalitat de Catalunya - Registro N° 08056183.<br> <br>Miembro de la Royal Academy of Dancing - Miembro de la Asociación de escuelas de danza autorizadas por la Generalitat de Catalunya.</h6>
+            <img id="logos" class="card-img" src="assets/img/logos.png">
+            <h6>Escuela de danza autorizada por el Departament d'Educació de la Generalitat de Catalunya - Registro N° 08056183.<br> <br>Miembro de la Royal Academy of Dancing - Miembro de la Asociación de escuelas de danza autorizadas por la Generalitat
+                de Catalunya.</h6>
         </div>
     </div>
 
